--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -16,6 +16,8 @@
 
 @import 'bootstrap-sprockets';
 @import 'bootstrap';
+@import 'font-awesome-sprockets';
+@import 'font-awesome';
 
 //Typography Styles
 h1, h2, h3 {
@@ -36,7 +38,7 @@ h1, h2, h3 {
 }
 
 .navbar-default .navbar-brand,
-.navbar-default .navbar-nav > li> a {
+.navbar-default .navbar-nav > li > a {
   color: white;
   &:hover {
     color: white;
